...
        titulo = "Tareas",
        descripcion = "Pendientes y entregas",
        emoji = "✅",
        ruta = Screen.Tareas.route
    ),
    AccesoHome(
        titulo = "Calendario",
        descripcion = "Fechas importantes",
        emoji = "📅",
        ruta = Screen.Calendario.route
    ),
    AccesoHome(
        titulo = "Calificaciones",
...
